# bachelor_diploma_work

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  apt-packages.txt
apps/: benchmark.cpp  main.cpp
include/: audio_io.hpp  bench_external.hpp  export.hpp  framing.hpp  metrics.hpp  pseudospectrum.hpp  reconstruction.hpp  stft.hpp  types.hpp  wht.hpp  window.hpp
scripts/: batch_run.sh  collect_results.py  generate_benchmark_wavs.sh  generate_machine_noise.py  make_noisy_librispeech.py  merge_benchmark_results.py  plot_benchmark_compare.py  plot_benchmarks.py  plot_pseudospectrum.py  plot_summary.py  prepare_dirs.py  run_benchmarks.sh  run_experiments.sh  run_noise_experiment.sh  run_window_sweep.sh  setup_experiments.sh  summarize_results.py
src/: audio_io.cpp  bench_external.cpp  export.cpp  framing.cpp  metrics.cpp  pseudospectrum.cpp  reconstruction.cpp  stft.cpp  wht.cpp  window.cpp
tests/: test_audio_io.cpp  test_export.cpp  test_framing.cpp  test_integration.cpp  test_metrics.cpp  test_pseudospectrum.cpp  test_reconstruction.cpp  test_stft.cpp  test_wht.cpp  test_window.cpp
